# typst-comitia

./: Cargo.toml  README.md  build.sh  package-build.sh
src/: lib.rs
src/input/: arguments.rs
src/tie/: mod.rs  tie.rs  tie_all.rs  tie_count.rs  tie_random.rs
src/voting/: mod.rs  results.rs  vote.rs  vote_plurality.rs  vote_stv.rs
typst-package/: example.typ  lib.typ  typst.toml  typst_vote_tools.wasm
